--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,15 @@ project(aoc2022)
 
 set(CMAKE_CXX_STANDARD 23)
 
-find_package(absl REQUIRED)
+include(FetchContent)
+set(ABSL_BUILD_TESTING OFF)
+FetchContent_Declare(
+        absl
+        GIT_REPOSITORY "https://github.com/abseil/abseil-cpp.git"
+        GIT_TAG "20220623.1"
+        GIT_SHALLOW TRUE
+)
+FetchContent_MakeAvailable(absl)
 
 add_executable(aoc2022 main.cpp)
 target_link_libraries(aoc2022 absl::strings)
